crates/rsciter_macro/tests/compile_fail/mutable_ref_test.rs
#[rsciter_macro::xmod]
mod with_mut_ref {
    pub fn test( x: &mut i32) {
    }
}

fn main() {}